# course-learning

./: .gitmodules  LICENSE  README.md
NTNU-artificial-intelligence/: .gitignore  README.md  pyproject.toml
NTNU-artificial-intelligence/hw1/: README.md  data.xlsx  main.ipynb
NTNU-artificial-intelligence/hw2/: IDASTAR.c  IDS.c  Makefile  README.md
NTNU-artificial-intelligence/hw2/data/input/IDASTAR/: 10.txt  4.txt  6.txt  7.txt  8.txt  9.txt
NTNU-artificial-intelligence/hw2/data/input/IDS/: 3.txt  4.txt  5.txt  8.txt  9.txt
NTNU-artificial-intelligence/hw2/data/output/IDASTAR/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  (+2 more)
NTNU-artificial-intelligence/hw3/: README.md  main.py
NTNU-artificial-intelligence/hw3/data/input/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
NTNU-artificial-intelligence/hw3/data/output/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
NTNU-artificial-intelligence/hw4/: README.md
NTNU-image-processing/: .gitignore  README.md  pyproject.toml
NTNU-image-processing/hw1/: README.md  main.py
NTNU-image-processing/hw10/: README.md  main.py
NTNU-image-processing/hw2/: README.md  main.py
NTNU-image-processing/hw3/: README.md  main.py
NTNU-image-processing/hw4/: README.md  main.py
NTNU-image-processing/hw5/: README.md  main.py
NTNU-image-processing/hw6/: README.md
NTNU-image-processing/hw7/: README.md  main.py
NTNU-image-processing/hw8/: README.md  main.py
NTNU-image-processing/hw9/: README.md  main.py
NTU-ADSP/: .gitignore  README.md  pyproject.toml
NTU-ADSP/hw1/: README.md  lowpass.py  main.py  test.py
NTU-ADSP/hw1/docs/: grade.txt
NTU-ADSP/hw2/: README.md  main.py
NTU-ADSP/hw2/docs/: grade.txt
NTU-ADSP/hw3/: README.md  main.py
NTU-ADSP/hw3/docs/: grade.txt
NTU-ADSP/hw4/: README.md  main.py
NTU-ADSP/hw4/docs/: grade.txt
NTU-ADSP/hw5/: README.md  main.py
(+604 files in other folders)
