[tool.poetry]
name = "ntnu-image-processing"
version = "0.1.0"
description = ""
authors = ["ryanlinjui <ryanlinjui@gmail.com>"]
readme = "README.md"
packages = [{include = "ntnu_image_processing"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
